sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:9: error: value _0 is not a member of (Int, Int)
    posJB = trouveBaseJoueur(i,nbrB)._0
                                     ^